c4prj2_input/grade.txt
Grading at Mon Jan 13 02:02:06 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:22:17: error: statement with no effect [-Werror=unused-value]
                 index[j] == lineptr[i];
                 ^
input.c:26:13: error: statement with no effect [-Werror=unused-value]
             index[j] == '\0';
             ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
